server changes-vnps

--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -23,7 +23,7 @@
 	<div class="left">
 		<div class="overlay">
 			<h3 style="padding-top: 30px;">Welcome Back </h3>
-		<h1 style="margin-top: 0px;">Notes 2.0</h1>
+		<h1 style="margin-top: 0px;">Notes Beta</h1>
 		<p>By Community For Community</p>
 		"Notes Beta" is a website that provides handwritten notes on various topics.Users can earn pointsby uploading their own notes or engaging <br>with  the community,
             and use those points to unlock more notes or purchase them from other users.<br><br>The website also features a leaderboard to encourage healthy competition among users.</p>
