--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -23,9 +23,9 @@
 	<div class="left">
 		<div class="overlay">
 		<h3 style="padding-top: 30px;">Eager to have you on Board with</h3>
-		<h1 style="margin-top: 0px;">Notes 2.0</h1>
+		<h1 style="margin-top: 0px;">Notes Beta</h1>
 		<p>By Community For Community</p>
-		
+
 			<img src="{% static 'images/demo23.png' %}" class="demoimg">
 		</div>
 	</div>
@@ -83,14 +83,14 @@
 				  </div>
 				  <br>
 				  <button type="submit" class="btn btn-primary btn-lg btn-block">REGISTER</button>
-				
+
 				<p>
 					ALREADY A USER ?
 
 
 				<a href="{% url 'loginR' %}">LOGIN</a></p>
 				</form>
-				
+
 			</div>
 
 	</div>
