--- a/templates/main/notesbought.html
+++ b/templates/main/notesbought.html
@@ -3,9 +3,9 @@
 	<title>DASHBOARD</title>
 	<link rel="stylesheet" href="{% static 'css/dash.css' %}" />
 	<link rel="stylesheet" href="{% static 'css/res.css' %}" />
-	
+
   <style>
- 
+
 .pagination {
   display: flex;
   justify-content: center;
@@ -56,7 +56,8 @@ a{
 	<header>
 
 		<div class="logosec">
-			<div class="logo">NOTES 2.0</div>
+		    <a href="{% url 'notes'%}">
+			<div class="logo">NOTES 2.0</div></a>
 			<img src=
 "https://media.geeksforgeeks.org/wp-content/uploads/20221210182541/Untitled-design-(30).png"
 				class="icn menuicn"
@@ -64,20 +65,20 @@ a{
 				alt="menu-icon">
 		</div>
 
-		
+
 		<div class="message">
 			<div class="circle"></div>
 			<img src=
 "https://media.geeksforgeeks.org/wp-content/uploads/20221210183322/8.png"
 				class="icn"
 				alt=""><h3 > COINS : {{user.coins_scored}} </h3>
-				
-        
+
+
 				<p><Strong style="color:#3f0097;">{{user.name}}</Strong></p>
 
         <a href="{% url 'dashboard' %}">
 			<div class="dp">
-				
+
 			<img src=
 "https://media.geeksforgeeks.org/wp-content/uploads/20221210180014/profile-removebg-preview.png"
 					class="dpicn"
@@ -100,14 +101,14 @@ a{
 							alt="dashboard">
 						<h3> Notes Bought </h3>
 					</div>
-          <a href="{% url 'dashboard' %}"> 
+          <a href="{% url 'dashboard' %}">
                     <div class="nav-option option3">
 						<img src=
 "https://media.geeksforgeeks.org/wp-content/uploads/20221210183320/5.png"
 							class="nav-img"
 							alt="report">
 						<h3 style="color: black;"> DashBoard</h3>
-         
+
 					</div>
         </a >
         <a href="{% url 'notes' %}">
@@ -120,7 +121,7 @@ a{
 					</div>
         </a>
 
-					
+
 
 					<!-- <div class="nav-option option4">
 						<img src=
@@ -200,7 +201,7 @@ a{
 					<a href="{% url 'noteslikes' %}" style="text-decoration: none;">
 					<div class="text">
 
-						
+
 						<h2  style="color: aliceblue;" class="topic-heading">{{note_likes}}</h2>
 						<h2  style="color: aliceblue;" class="topic">Likes</h2>
 					</a>
@@ -211,17 +212,17 @@ a{
 						alt="comments">
 				</div>
 
-				
+
 				<div class="box box4">
 					<a href="{% url 'notesuploded' %}" style="text-decoration: none;">
 					<div class="text">
 						<h2 style="color: aliceblue;"  class="topic-heading">{{notes.count}}</h2>
-						
+
 						<h2 style="color: aliceblue;" class="topic"> Notes Uploaded</h2>
 						</a>
-					
+
 					</div>
-				
+
 
 					<img src=
 "https://media.geeksforgeeks.org/wp-content/uploads/20221210185029/13.png" alt="published">
@@ -239,28 +240,28 @@ a{
 						<h3 class="t-op">Sr. No</h3>
 						<h3 class="t-op">File Name</h3>
 						<h3 class="t-op">PDF</h3>
-						
+
 					</div>
-				
+
 					<div class="items">
 						{% for x in note %}
 						<div class="item1">
 							<h3 class="t-op-nextlvl">{{ forloop.counter }}</h3>
 							<h3 class="t-op-nextlvl">{{x.typeN}} of Module {{x.mod}} - {{x.sub}}</h3>
               {% if x.status %}
-							<h3 class="t-op-nextlvl"><a href="{{ x.file.url }}"><button style="background-color:rgb(24, 172, 103)">View PDF</button></a></h3>
+							<h3 class="t-op-nextlvl"><a href="{{ x.docid }}"><button style="background-color:rgb(24, 172, 103)">View PDF</button></a></h3>
               {% else %}
-							
 
-             
+
+
               {% endif %}
 						</div>
 						{% endfor %}
 
 					</div>
 				</div>
-       
-				
+
+
 	</div>
   <script>
 	let menuicn = document.querySelector(".menuicn");
