--- a/static/css/card.css
+++ b/static/css/card.css
@@ -1,9 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Rubik:400,900);
 
-/* 
+/*
 body {
-	
+
 	transform-style:preserve-3d;
 	transform:perspective(800px);
 	font-family:'Lato', Sans-serif;
@@ -19,8 +19,8 @@ body {
 }
 
 .cardImg .text-block {
-  position:relative;
-  z-index:2;
+  /*position:relative;*/
+  /*z-index:2;*/
   text-shadow:0 3 10 rgba(0, 0, 0, 0.7);
 }
 .cardImg .text-block h1 {
@@ -59,9 +59,9 @@ button{
 
 @media (max-width: 410px){
     .cardImg .text-block h1 {
-        
+
         font-size: 2.2em;
-    
+
     }
     .cardImg{
         height: 13em;
@@ -69,8 +69,8 @@ button{
 }
 @media (max-width: 385px){
     .cardImg .text-block h1 {
- 
+
         font-size: 1.9em;
-        
+
     }
 }
