--- a/templates/authentication/404.html
+++ b/templates/authentication/404.html
@@ -20,26 +20,26 @@ integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6
 <center>
 <section class="page_404">
 	<div class="container">
-		<div class="row d-flex justify-content-center align-items-center">	
-			
+		<div class="row d-flex justify-content-center align-items-center">
+
 				<div class="col-sm-10 col-sm-offset-1  text-center">
 					<div class="four_zero_four_bg img-fluid">
 						<h1 class="text-center" style="color: black; padding-top: -150px ;">404</h1>
-					
-					
+
+
 					</div>
-				
+
 					<div class="contant_box_404" style="color: black;">
 						<h3 class="h2">
 						Look like you're lost
 						</h3>
-						
-						<p>the page you are looking for is not avaible!</p>
-						
+
+						<p>the page you are looking for is not available!</p>
+
 						<a href="{% url 'home' %}" class="link_404" style="text-decoration: none; color: white;">Go to Home</a>
 					</div>
 				</div>
-			
+
 		</div>
 	</div>
 </section>
@@ -58,5 +58,5 @@ integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6
 </html>
 
 
-<!-- partial -->  
+<!-- partial -->
 
