--- a/templates/main/about.html
+++ b/templates/main/about.html
@@ -11,6 +11,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/aboutus.css' %}">
+    <link href="{% static 'images/notees.png' %}" rel="icon" type="image/x-icon" >
     <title>About us</title>
 </head>
 <body>
@@ -135,32 +136,32 @@
                   </div>
                 </div>
               </div>
-            <div class="responsive-cell-block wk-desk-2 wk-ipadp-2 wk-tab-6 wk-mobile-12 team-card-container">
-              <div class="team-card">
-                <div class="img-wrapper">
-                  <img class="team-img" src="{% static 'images/Akash.jpg' %}">
-                </div>
-                <p class="text-blk name">
-                  Akash Mourya
-                  <P class="text-blk name">SE-IT</P>
-                </p>
-                <p class="text-blk position">
-                    Developer
-                </p>
-                <div class="social-media-links">
-                  <a href="http://www.twitter.com/" target="_blank">
-                    <img src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/gray-twitter.svg">
-                  </a>
-                  <a href="http://www.facebook.com/" target="_blank">
-                    <img src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/gray-fb.svg">
-                  </a>
-                  <a href="http://www.instagram.com/" target="_blank">
-                    <img src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/gray-insta.svg">
-                  </a>
-                  <a href="http://www.gmail.com/" target="_blank">
-                    <img src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/gray-mail.svg">
-                  </a>
-                </div>
+            <!--<div class="responsive-cell-block wk-desk-2 wk-ipadp-2 wk-tab-6 wk-mobile-12 team-card-container">-->
+            <!--  <div class="team-card">-->
+            <!--    <div class="img-wrapper">-->
+            <!--      <img class="team-img" src="{% static 'images/Akash.jpg' %}">-->
+            <!--    </div>-->
+            <!--    <p class="text-blk name">-->
+            <!--      Akash Mourya-->
+            <!--      <P class="text-blk name">SE-IT</P>-->
+            <!--    </p>-->
+            <!--    <p class="text-blk position">-->
+            <!--        Developer-->
+            <!--    </p>-->
+            <!--    <div class="social-media-links">-->
+            <!--      <a href="http://www.twitter.com/" target="_blank">-->
+            <!--        <img src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/gray-twitter.svg">-->
+            <!--      </a>-->
+            <!--      <a href="http://www.facebook.com/" target="_blank">-->
+            <!--        <img src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/gray-fb.svg">-->
+            <!--      </a>-->
+            <!--      <a href="http://www.instagram.com/" target="_blank">-->
+            <!--        <img src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/gray-insta.svg">-->
+            <!--      </a>-->
+            <!--      <a href="http://www.gmail.com/" target="_blank">-->
+            <!--        <img src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/gray-mail.svg">-->
+            <!--      </a>-->
+            <!--    </div>-->
               </div>
             </div>
           </div>
