--- a/templates/main/add_reminder.html
+++ b/templates/main/add_reminder.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <style>
-  
+
   .container {
     max-width: 960px;
     margin-top: -7%;
@@ -18,6 +18,7 @@
   }
 </style>
 <link rel="stylesheet" href="{% static 'css/newAdd.css' %}" />
+<link href="{% static 'images/notees.png' %}" rel="icon" type="image/x-icon" >
 </head>
 
 <div class="container">
@@ -25,13 +26,13 @@
       <form method="POST">
 
   <h1>Add Reminder</h1>
- 
+
     {% csrf_token %}
     {{ form|crispy}}
     <center>
     <button class="btn btn-primary" type="submit">Add Reminder</button>
 <center>
-</form>	
+</form>
 </div>
 
 
