--- a/templates/main/noteViewer.html
+++ b/templates/main/noteViewer.html
@@ -23,21 +23,24 @@
     <form method="POST" action="{% url 'notesViewer' note.slug %}">
       {% csrf_token %}
       <button type="submit" name="bookmark" value="remove" class="btn btn-danger">
-        <i class="fa fa-bookmark" aria-hidden="true"></i><i class="fa fa-bookmark-o" aria-hidden="true"></i>  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                  >
-                  <path fill="currentColor" d="M19 0H5C3.9 0 3 .9 3 2v20l9-5.2L21 22V2c0-1.1-.9-2-2-2z"/>
-                  </svg> &nbsp; Remove Bookmark
+        <i class="fa fa-bookmark" aria-hidden="true"></i><i class="fa fa-bookmark-o" aria-hidden="true"></i>
+        <!--<svg-->
+        <!--            xmlns="http://www.w3.org/2000/svg"-->
+        <!--            width="24"-->
+        <!--            height="24"-->
+        <!--            viewBox="0 0 24 24"-->
+        <!--          >-->
+        <!--          <path fill="currentColor" d="M19 0H5C3.9 0 3 .9 3 2v20l9-5.2L21 22V2c0-1.1-.9-2-2-2z"/>-->
+        <!--          </svg> -->
+                  &nbsp; Remove Bookmark
       </button>
     </form>
     {% else %}
     <form method="POST" action="{% url 'notesViewer' note.slug %}">
       {% csrf_token %}
       <button type="submit" name="bookmark" value="add" class="btn btn-primary">
-        <i class="fa fa-bookmark-o" aria-hidden="true"></i>  <svg
+        <!--<i class="fa fa-bookmark-o" aria-hidden="true"></i>  -->
+        <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="24"
                     height="24"
