--- a/templates/main/addNotes.html
+++ b/templates/main/addNotes.html
@@ -25,6 +25,8 @@
 			<label for="module" style="text-align: left; padding: 10px;">Module number:</label>
       <select name="moduleNo" class="form-select" id="module" aria-label="Default select example">
         <option selected disabled="true"></option>
+        <option value="0" selected>--</option>
+        <option value="7" >All</option>
         <option value="1">1</option>
         <option value="2">2</option>
         <option value="3">3</option>
@@ -43,6 +45,8 @@
               <option value="PYQ">Previous Year Question Paper</option>
 
       </select>
+           <label for="description" style="text-align: left; padding: 10px;">Description:</label>
+           <input type="text" name="desc" id="desc" placeholder="Description" >
 
               <span class="form-title">Upload your file</span>
 
