--- a/templates/main/btmNavSort.html
+++ b/templates/main/btmNavSort.html
@@ -23,14 +23,17 @@
 
           <div class="card-body">
             <div class="text-block">
-              <h1>{{x.sub}} <small><br>MOD : {{x.mod}}</small></h1>
-              <h3>{{x.typeN}}</h3>
+              <h1>{{x.sub}} <small><br>MOD : {{x.mod}} | {{x.typeN}}</small></h1>
+
               <p>
                 LIKES: {{x.likes.count}}
 
 
                 <br>
                 CREDIT : {{x.author.name}}
+                <br>
+                DESC : {{x.desc}}
+
               </p>
               {% if request.user in x.buy.all %}
               <form method="POST" action="{% url 'notesViewer' x.slug %}">
