--- a/templates/main/searchR.html
+++ b/templates/main/searchR.html
@@ -1,60 +1,63 @@
 {% extends 'index.html' %}
 {% block content %}
+{% load crispy_forms_tags %}
 {% load static %}
-<style>
-    .nfound{
-        margin-top: -2em;
-    }
-    .sbtn{
-        width: 16em;
-        height: 3em;
 
-    }
-    .searchCnt{
-        margin-bottom: 2em;
-    }
-</style>
-<div class="container mt-4 searchCnt">
+<link rel="stylesheet" href="{% static 'css/card.css' %}" />
 
-    <div class="row">
-        {% if notes %}
-        <div class="col-12">
-            <h3 class="d-flex justify-content-center align-items-center">Your Search Results for {{ser}}</h3>
-        </div>
-            <div class="row d-flex justify-content-center align-items-center">
-                {% for x in notes %}
-                <div class="card mt-4 mx-4" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">{{x.sub}}</h5>
-                        <h6 class="card-subtitle mb-2">Module No: {{x.mod}}</h6>
-                        <h6 class="card-subtitle mb-2 text-muted">{{x.typeN}}</h6>
-                        <p class="card-text">Thanks to : {{x.author}} </p>
-                        <a href="{{x.docid}}" class="card-link">View PDF</a>
-                    </div>
-                </div>
-                {% endfor %}
-            </div>
-        {% else %}
-        <div class="row d-flex justify-content-center align-items-center">
+<div class="container notesCnt mt-4">
+    <div class="row d-flex justify-content-center align-items-center">
+        <div class="container-lg-6">
+            {% include 'components/search.html' %}
 
-            <div class="col-md-8 col-lg-7 col-xl-6 d-flex justify-content-center align-items-center  mt-5">
-                <h4 style = "padding: 1em 1em;">Seems like no one has uploaded the notes you've searched for</h4>
-            </div>
-
-            <div class="col-md-8 col-lg-7 col-xl-6 d-flex justify-content-center align-items-center">
-
-                <img src="{% static 'images/remove.png' %}" class="img-fluid" alt="">
-            </div>
-        </div>
-        <div class="row d-flex justify-content-center align-items-center nfound">
-            <div class="col-md-8 col-lg-7 col-xl-6 d-flex justify-content-center align-items-center">
-                <a href="{% url 'notes' %}" class="slink"><button class="btn sbtn btn-primary">Search Another</button></a>
-            </div>
         </div>
 
+        {% include 'components/filter.html' %}
 
-        {% endif %}
+
     </div>
 
+    <div class="row d-flex justify-content-center align-items-center">
+        {% for x in notes %}
+        <div class="card cardImg mx-4 my-4" style="width: 22rem; height: 16em; background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.2) 60%),url('{{x.sub.img.url}}');">
+
+          <div class="card-body">
+            <div class="text-block">
+              <h1>{{x.sub}} <small><br>MOD : {{x.mod}} | {{x.typeN}}</small></h1>
+
+              <p>
+                LIKES: {{x.likes.count}}
+
+
+                <br>
+                CREDIT : {{x.author.name}}
+                <br>
+               DESC : {{x.desc}}
+              </p>
+              {% if request.user in x.buy.all %}
+              <form method="POST" action="{% url 'notesViewer' x.slug %}">
+                {% csrf_token %}
+                <a href="{{x.docid}}" class="card-link">
+                  <button type="submit" class="btn btn-success">View PDF</button>
+                </a>
+              </form>
+
+              {% else %}
+              <form action="{% url 'buy_notes' x.pk %}" method="POST">
+                {% csrf_token %}
+                <input type="hidden" name="note_id" value="{{x.note_id}}">
+                <button class="btn btn-primary" type="submit">Buy Notes</button>
+              </form>
+              {% endif %}
+
+
+            </div>
+          </div>
+          </div>
+        {% endfor %}
+      </div>
+
 </div>
+{% include 'components/notesBottomNav.html' %}
+
 {% endblock %}
