Total users on leaderboard

--- a/templates/main/addNotes.html
+++ b/templates/main/addNotes.html
@@ -46,7 +46,7 @@
 
       </select>
            <label for="description" style="text-align: left; padding: 10px;">Description:</label>
-           <input type="text" name="desc" id="desc" placeholder="Description" >
+           <input type="text" name="desc" id="desc" placeholder="Description : Max 15 letters" >
 
               <span class="form-title">Upload your file</span>
 
