--- a/templates/main/realhome.html
+++ b/templates/main/realhome.html
@@ -1,6 +1,7 @@
 {% extends 'index.html' %} {% block content %} {% load crispy_forms_tags %}
 {% load static %}
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4069479310852182"
+     crossorigin="anonymous"></script>
 <link rel="stylesheet" href="{% static 'css/card.css' %}" />
 <style>
 
