--- a/templates/main/dashboard.html
+++ b/templates/main/dashboard.html
@@ -1,5 +1,7 @@
 {% load static %}
 {% block content %}
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4069479310852182"
+     crossorigin="anonymous"></script>
 	<title>DASHBOARD</title>
 	<link rel="stylesheet" href="{% static 'css/dash.css' %}" />
 	<link rel="stylesheet" href="{% static 'css/res.css' %}" />
@@ -205,7 +207,7 @@
 			<div class="report-container">
 				<div class="report-header">
 					<h1 class="recent-Articles">Leaderboard Top 10</h1>
-					<a href="{% url 'leaderboard' %}" style="text-decoration: none;"><button class="view">View All</button></a>
+					<a href="{% url 'leaderboard' %}" style="text-decoration: none;"><button class="view">View All {{user_count}}</button></a>
 				</div>
 
 				<div class="report-body">
