--- a/templates/main/land.html
+++ b/templates/main/land.html
@@ -185,7 +185,8 @@ cursor: pointer;
       <a href="" class="logo">
         <img src="{% static 'images/noteslogo2.png' %}" alt="">
       </a>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4069479310852182"
+     crossorigin="anonymous"></script>
     </header>
     <section>
       <div class="content">
@@ -204,7 +205,7 @@ cursor: pointer;
         <img class="cube" src="{% static 'images/cube.png' %}" alt="">
         <img class="mainimg" src="{% static 'images/square.png' %}" alt="">
       </div>
-      
+
     </section>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
