--- a/templates/components/notesBottomNav.html
+++ b/templates/components/notesBottomNav.html
@@ -61,7 +61,7 @@
         <span class="nav-text">Add Notes</span>
     </a>
 
-    
+
 
     <a href="{% url 'referenceBooks' %}" class="nav-linkt">
         <i class="fas fa-book" title="Reference Books"></i>
@@ -73,7 +73,12 @@
         <span class="nav-text">PYQ</span>
     </a>
 
-   
+    <a href="{% url 'Assignment' %}" class="nav-linkt">
+        <i class="far fa-newspaper"></i>
+        <span class="nav-text">Assignment</span>
+    </a>
+
+
 
 
 </nav>
