--- a/templates/main/leader.html
+++ b/templates/main/leader.html
@@ -3,9 +3,9 @@
 	<title>DASHBOARD</title>
 	<link rel="stylesheet" href="{% static 'css/dash.css' %}" />
 	<link rel="stylesheet" href="{% static 'css/res.css' %}" />
-	
+
   <style>
- 
+
 .pagination {
   display: flex;
   justify-content: center;
@@ -55,7 +55,8 @@ a{
 	<header>
 
 		<div class="logosec">
-			<div class="logo">NOTES 2.0</div>
+		    <a href="{% url 'notes'%}">
+			<div class="logo">NOTES 2.0</div></a>
 			<img src=
 "https://media.geeksforgeeks.org/wp-content/uploads/20221210182541/Untitled-design-(30).png"
 				class="icn menuicn"
@@ -63,16 +64,16 @@ a{
 				alt="menu-icon">
 		</div>
 
-		<div class="searchbar">
-			<input type="text"
-				placeholder="Search">
-			<div class="searchbtn">
-			<img src=
-"https://media.geeksforgeeks.org/wp-content/uploads/20221210180758/Untitled-design-(28).png"
-					class="icn srchicn"
-					alt="search-icon">
-			</div>
-		</div>
+<!--		<div class="searchbar">-->
+<!--			<input type="text"-->
+<!--				placeholder="Search">-->
+<!--			<div class="searchbtn">-->
+<!--			<img src=-->
+<!--"https://media.geeksforgeeks.org/wp-content/uploads/20221210180758/Untitled-design-(28).png"-->
+<!--					class="icn srchicn"-->
+<!--					alt="search-icon">-->
+<!--			</div>-->
+<!--		</div>-->
 
 		<div class="message">
 			<div class="circle"></div>
@@ -80,11 +81,11 @@ a{
 "https://media.geeksforgeeks.org/wp-content/uploads/20221210183322/8.png"
 				class="icn"
 				alt=""><h3 > COINS : {{user.coins_scored}} </h3>
-				
+
 				<p><Strong style="color: blueviolet;">{{user.name}}</Strong></p>
         <a href="{% url 'dashboard'%}">
 			<div class="dp">
-				
+
 			<img src=
 "https://media.geeksforgeeks.org/wp-content/uploads/20221210180014/profile-removebg-preview.png"
 					class="dpicn"
@@ -106,14 +107,14 @@ a{
 							alt="dashboard">
 						<h3> Leaderboard</h3>
 					</div>
-          <a href="{% url 'dashboard' %}"> 
+          <a href="{% url 'dashboard' %}">
                     <div class="nav-option option3">
 						<img src=
 "https://media.geeksforgeeks.org/wp-content/uploads/20221210183320/5.png"
 							class="nav-img"
 							alt="report">
 						<h3 style="color: black;"> DashBoard</h3>
-         
+
 					</div>
         </a>
 					<div class="option2 nav-option">
@@ -124,7 +125,7 @@ a{
 						<h3> Notes </h3>
 					</div>
 
-					
+
 
 					<!-- <div class="nav-option option4">
 						<img src=
@@ -204,7 +205,7 @@ a{
 					<a href="{% url 'noteslikes' %}" style="text-decoration: none;">
 					<div class="text">
 
-						
+
 						<h2  style="color: aliceblue;" class="topic-heading">{{note_likes}}</h2>
 						<h2  style="color: aliceblue;" class="topic">Likes</h2>
 					</a>
@@ -215,17 +216,17 @@ a{
 						alt="comments">
 				</div>
 
-				
+
 				<div class="box box4">
 					<a href="{% url 'notesuploded' %}" style="text-decoration: none;">
 					<div class="text">
 						<h2 style="color: aliceblue;"  class="topic-heading">{{notes.count}}</h2>
-						
+
 						<h2 style="color: aliceblue;" class="topic"> Notes Uploaded</h2>
 						</a>
-					
+
 					</div>
-				
+
 
 					<img src=
 "https://media.geeksforgeeks.org/wp-content/uploads/20221210185029/13.png" alt="published">
@@ -244,7 +245,7 @@ a{
 						<h3 class="t-op">Name</h3>
 						<h3 class="t-op">Coins</h3>
 					</div>
-				
+
 					<div class="items">
 						{% for user in page_obj %}
 						<div class="item1">
@@ -255,25 +256,25 @@ a{
 						{% endfor %}
 					</div>
 				</div>
-			
+
         <div class="pagination">
           <span class="step-links">
             {% if page_obj.has_previous %}
             <a href="?page=1"> <button>&laquo;  first </button> </a>
             <a href="?page={{ page_obj.previous_page_number }}"><button> previous</button></a>
             {% endif %}
-        
+
             <span class="current-page">
               Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
             </span>
-        
+
             {% if page_obj.has_next %}
             <a href="?page={{ page_obj.next_page_number }}"><button> next</button></a>
             <a href="?page={{ page_obj.paginator.num_pages }}"><button>last &raquo;</button></a>
             {% endif %}
           </span>
         </div>
-				
+
 	</div>
   <script>
 	let menuicn = document.querySelector(".menuicn");
